# MLIR.jl

./: .gitignore  15-to-16.diff  LICENSE  Manifest.toml  Project.toml  README.md  bindings.toml  create_bindings.jl  create_dev.sh  functionlist15.txt  jl.sh  usedfunctionlist.txt
.github/workflows/: CI.yml  Format.yml
bindings/: Manifest.toml  Project.toml  make.jl  wrap.toml
build_tools/: create_bindings.jl  create_bindings.sh
dev/: index.html  search_index.js
dev/api/: index.html
dev/search/: index.html
docs/: Project.toml  make.jl
docs/src/: api.md  index.md
examples/: blocks.jl  brutus-14.jl  brutus.jl  ir.jl  linalg.jl  simple.jl
examples/generate/: definitions.jl  main.jl
lib/: libMLIR_common.jl  libMLIR_h.jl  libmlir_api.jl  libmlir_common.jl
lib/12/: api.jl
lib/14/: libMLIR_h.jl
lib/15/: libMLIR_h.jl
previews/PR15/: index.html  search_index.js
previews/PR64/: index.html  search_index.js
previews/PR9/: index.html  search_index.js
res/: Project.toml  README.md  wrap.jl  wrap.toml  wrap_direct.jl
src/: API.jl  Affine.jl  Dialects.jl  Dispatcher.jl  IR.jl  MLIR.jl  base.jl  highlevel.jl  init.jl  utils.jl
src/API/: API.jl  Types.jl
src/Dialects/: Dialects.jl  Utils.jl
src/Generate/: CodeInfoTools.jl  CodegenContext.jl  Generate.jl  absint.jl  intrinsic.jl  transform.jl
src/IR/: AffineExpr.jl  AffineMap.jl  Attribute.jl  Block.jl  Context.jl  Dialect.jl  ExecutionEngine.jl  IR.jl  Identifier.jl  (+15 more)
test/: Project.toml  context.jl  examples.jl  executionengine.jl  ir.jl  runtests.jl
test/standalone/standalone-c/: CMakeLists.txt
(+440 files in other folders)
